fix: Fix home content horizontal alignment in tablet breakpoint

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -12,6 +12,13 @@
     margin-bottom: 50px;
 }
 
+.home .container-narrow {
+    @media screen and (max-width: 1100px) and (min-width: 800px) {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
 .home .intro {
     text-align: center;
 }
